[gd_scene load_steps=2 format=3 uid="uid://inventory_hud_001"]

[ext_resource type="Script" path="res://scenes/ui/inventory_hud.gd" id="1"]

[node name="InventoryHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 1
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 1
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GoldLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Gold: 0"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.84, 0, 1)

[node name="ItemsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Items: 0"
theme_override_font_sizes/font_size = 16
